--- a/.github/workflows/workflow-prod.yaml
+++ b/.github/workflows/workflow-prod.yaml
@@ -19,11 +19,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    
+
+    - name: S3 Sync (misc files)
+      uses: jakejarvis/s3-sync-action@v0.5.0
+      with:
+        args: --acl public-read --follow-symlinks --delete --metadata-directive REPLACE --exclude '*.md' --cache-control max-age=0,no-cache,no-store,must-revalidate
+      env:
+        AWS_S3_BUCKET: ${{ secrets.S3_BUCKET_NAME_PROD }}
+        SOURCE_DIR: 'content/tutorials'
+        DEST_DIR: 'content/tutorials'
+
     - name: S3 Sync (Markdown files)
       uses: jakejarvis/s3-sync-action@v0.5.0
       with:
-        args: --acl public-read --follow-symlinks --delete --metadata-directive REPLACE --cache-control max-age=0,no-cache,no-store,must-revalidate
+        args: --acl public-read --follow-symlinks --delete --metadata-directive REPLACE --exclude '*' --include '*.md' --content-type 'text/markdown' --cache-control max-age=0,no-cache,no-store,must-revalidate
       env:
         AWS_S3_BUCKET: ${{ secrets.S3_BUCKET_NAME_PROD }}
         SOURCE_DIR: 'content/tutorials'
