--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -6,6 +6,7 @@ on:
   push:
     branches:
       - master
+      - validation
 
 env:
   AWS_REGION: 'us-west-1'
@@ -24,8 +25,9 @@ jobs:
     - uses: actions/checkout@v1
     
     - name: Validate      
-      run: npm install
-      run: npm validate.js
+      run: |
+        npm install
+        npm validate.js
 
     - name: S3 sync (misc files)
       run: |
