Move validation to tests directory

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -25,7 +25,7 @@ jobs:
     
     - name: Validate      
       run: |
-        cd validation
+        cd tests
         npm install
         node validate.js
 
