--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -5,7 +5,7 @@ on:
     types: deploy
   push:
     branches:
-      - master
+      - master      
 
 env:
   AWS_REGION: 'us-west-1'
@@ -23,6 +23,12 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     
+    - name: Validate      
+      run: |
+        cd tests
+        npm install
+        node validate.js
+
     - name: S3 sync (misc files)
       run: |
         aws s3 sync \
