Run workflow on pull request

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -5,7 +5,9 @@ on:
     types: deploy
   push:
     branches:
-      - master      
+      - master  
+  pull_request:
+    types: [opened, synchronize, ready_for_review, reopened]
 
 env:
   AWS_REGION: 'us-west-1'
