--- a/.github/workflows/workflow-validate.yaml
+++ b/.github/workflows/workflow-validate.yaml
@@ -6,7 +6,7 @@ on:
     types: deploy
   push:
     branches:
-      - master      
+      - main      
   pull_request:
     types: [opened, synchronize, ready_for_review, reopened]
 
