Allow for validating single tutorials

--- a/.github/workflows/workflow-validate.yaml
+++ b/.github/workflows/workflow-validate.yaml
@@ -22,7 +22,6 @@ jobs:
     - uses: actions/checkout@v1
     
     - name: Validate      
-      run: |
-        cd tests
+      run: |        
         npm install
-        node validate.js
+        node tests/validate.js
