--- a/.github/workflows/workflow-validate.yaml
+++ b/.github/workflows/workflow-validate.yaml
@@ -22,6 +22,8 @@ jobs:
     - uses: actions/checkout@v1
     
     - name: Validate      
-      run: |        
+      run: |
+        cd tests
         npm install
+        cd ..
         node tests/validate.js
