--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -51,6 +51,27 @@ jobs:
           --content-type 'text/markdown' \
           --cache-control max-age=0,no-cache,no-store,must-revalidate
 
+    - name: Datasheet generation
+      cd scripts
+      npm install
+      cd ..
+      node scripts/generate-datasheets.js
+
+    - name: S3 sync (Datasheet PDFs)
+      run: |
+        aws s3 sync \
+          content/tutorials \
+          s3://${{ secrets.S3_BUCKET_NAME }}/content/datasheets/ \
+          --no-progress \
+          --acl public-read \
+          --follow-symlinks \
+          --delete \
+          --metadata-directive REPLACE \
+          --exclude '*' \
+          --include '*.pdf' \
+          --content-type 'application/pdf' \
+          --cache-control max-age=0,no-cache,no-store,must-revalidate
+
     - name: Invalidate CloudFront distribution
       run: |
         aws cloudfront create-invalidation \
