--- a/scripts/datasheet-generator/package.json
+++ b/scripts/datasheet-generator/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "front-matter": "^4.0.2",
     "fs": "^0.0.1-security",
     "html-pdf": "^2.2.0",
     "html-pdf-node": "^1.0.7",
