--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -52,9 +52,10 @@ jobs:
           --cache-control max-age=0,no-cache,no-store,must-revalidate
 
     - name: Datasheet generation
-      cd scripts
-      npm install      
-      node generate-datasheets.js
+      run: |
+        cd scripts
+        npm install
+        node generate-datasheets.js
 
     - name: S3 sync (Datasheet PDFs)
       run: |
