Temporary add test branch to workflow

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -5,7 +5,8 @@ on:
     types: deploy
   push:
     branches:
-      - main    
+      - main
+      - breakout-datasheet    
 
 env:
   AWS_REGION: 'us-west-1'
