Add aws invalidation for datasheets

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -6,6 +6,7 @@ on:
   push:
     branches:
       - main
+      - breakout-datasheet
 
 env:
   AWS_REGION: 'us-west-1'
@@ -77,4 +78,4 @@ jobs:
       run: |
         aws cloudfront create-invalidation \
           --distribution-id "${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}" \
-          --paths '/content/tutorials/*'
+          --paths '/content/tutorials/*' '/content/datasheets/*'
