Add datasheet PDF generator (#90)
* Add scaffold for datasheet generator

* Add datasheet workflow

* Fix compile error in file helper

* Add scaffold for PDF generator

* Add dummy file for data sheet

* Move generic scripts to lib folder

* Add node modules

* Add function to create directory

* Add datasheet generator

* Add assets to datasheet

* Refactor datasheet parser

* Add front matter support

* Update build path for PDFs

* Refactor parser code

* Refactor markdown parser

* Fix syntax error in workflow

* Fix broken logo display

* Temporary add test branch to workflow

* Fix incorrect path in workflow

* Derive CSS path from type

* Finalise Front Page & Header Style (#89)

LGTM

* Remove unused logo

* Add build folder to git ignore

* Refactor styles

* Refactor headings

* Refactor styles

* Format featured image with pure CSS

* Style refactorings

* Extract generic PDF options

* Remove unused branch from workflow

* Add aws invalidation for datasheets

* Remove breakout-datasheet branch from workflow

Co-authored-by: Manuel Zomer <47141795+manuelzomer@users.noreply.github.com>

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -5,7 +5,7 @@ on:
     types: deploy
   push:
     branches:
-      - main    
+      - main
 
 env:
   AWS_REGION: 'us-west-1'
@@ -51,8 +51,30 @@ jobs:
           --content-type 'text/markdown' \
           --cache-control max-age=0,no-cache,no-store,must-revalidate
 
+    - name: Datasheet generation
+      run: |
+        cd scripts/datasheet-generator
+        npm install
+        cd ..
+        node generate-datasheets.js
+
+    - name: S3 sync (Datasheet PDFs)
+      run: |
+        aws s3 sync \
+          build/datasheets \
+          s3://${{ secrets.S3_BUCKET_NAME }}/content/datasheets/ \
+          --no-progress \
+          --acl public-read \
+          --follow-symlinks \
+          --delete \
+          --metadata-directive REPLACE \
+          --exclude '*' \
+          --include '*.pdf' \
+          --content-type 'application/pdf' \
+          --cache-control max-age=0,no-cache,no-store,must-revalidate
+
     - name: Invalidate CloudFront distribution
       run: |
         aws cloudfront create-invalidation \
           --distribution-id "${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}" \
-          --paths '/content/tutorials/*'
+          --paths '/content/tutorials/*' '/content/datasheets/*'
