Adjust GH workflow for new directory structure

--- a/.github/workflows/workflow-validate.yaml
+++ b/.github/workflows/workflow-validate.yaml
@@ -23,7 +23,7 @@ jobs:
     
     - name: Validate      
       run: |
-        cd tests
+        cd scripts/validation
         npm install
-        cd ..
-        node tests/validate.js
+        cd ../../
+        node scripts/validation/validate.js
