Fix workflow paths

--- a/.github/workflows/workflow-validate.yaml
+++ b/.github/workflows/workflow-validate.yaml
@@ -26,4 +26,4 @@ jobs:
         cd scripts/validation
         npm install
         cd ../../
-        node scripts/validation/validate.js
+        ./content-lint
