--- a/scripts/validation/config/rules-spelling.yml
+++ b/scripts/validation/config/rules-spelling.yml
@@ -1,11 +1,14 @@
 ---
 - regex: "\\d\\s?[Mm]ega\\s[Bb]yte|\\d\\s?Mega\\s?[Bb]yte|\\d\\s?mb[\\s\\.]|[Mm][Bb]ytes"
   shouldMatch: false
+  type: warning
   format: markdown
   errorMessage: Megabytes should be either written as 'megabytes' or abbreviated as
     'MB'
     
-- regex: "[wW]i[fF]i"
+# Excludes Wi-Fi in URLs (prepended by dash or slash) and WiFi.XY and MKR WiFi
+- regex: "(?<![\\/-]|MKR )[wW]i[fF]i(?![-\\/]|\\.?\\S)"
   shouldMatch: false
+  type: warning
   format: markdown
   errorMessage: Incorrect spelling of Wi-Fi found.
