Allow for java syntax code blocks

--- a/scripts/validation/config/config-tutorials.yml
+++ b/scripts/validation/config/config-tutorials.yml
@@ -9,6 +9,7 @@ allowedSyntaxSpecifiers:
 - cpp
 - py
 - text
+- java
 
 allowNestedLists: false
 metadataSchema: scripts/validation/config/metadata-schema.json
